SFA-2714: fix z-index issue of headerpane input text when inline editing

--- a/sugarcrm/styleguide/less/clients/base/components/headerpane.less
+++ b/sugarcrm/styleguide/less/clients/base/components/headerpane.less
@@ -92,7 +92,7 @@
     height: calc(100% - 16px);
     top: 0;
     left: 0;
-    z-index: 10000;
+    z-index: 0;
     .record-edit-link {
       margin-left: 0;
       .icon-pencil {
@@ -221,6 +221,8 @@
     .box-sizing(border-box);
     height: @fontSizeHeader + 10px;
     margin: 0;
+    position: relative;
+    z-index: 1;
   }
 
   //action buttons
